[package]
name = "scry"
version = "1.0.0"
edition = "2021"
description = "Show an image with a marker approximately where the call comes from."
repository = "https://github.com/SalvatoreT/scry"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.20"

[profile.release]
lto = true
strip = true
codegen-units = 1
